--- a/app/templates/home/secrets.html
+++ b/app/templates/home/secrets.html
@@ -116,7 +116,7 @@
                                 actionsCell.style.width = '20%';
 
                                 const editBtn = document.createElement('a');
-                                editBtn.className = 'btn btn-secondary';
+                                editBtn.className = 'btn btn-primary';
                                 editBtn.href = `/edit_secret?secret_id=${secret.id}&secret_type=${secret.type}`;
                                 editBtn.textContent = 'Edit';
                                 actionsCell.appendChild(editBtn);
